--- a/cityguessr.client/src/app/game/game.component.css
+++ b/cityguessr.client/src/app/game/game.component.css
@@ -1,16 +1,17 @@
 .frame-container {
   position: absolute;
-  width: 300%;
+  width: 500%;
   height: 100%;
-  left: -100%;
+  left: -200%;
+  pointer-events: none;
 }
 
   .frame-container iframe {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
   }
 
 .wrapper {
@@ -34,7 +35,6 @@
 
 .youtube-wrapper {
   position: relative;
-  pointer-events: none;
   max-width: 100%;
   height: 100%;
   overflow: hidden;
@@ -47,7 +47,7 @@
 }
 
 .mini {
-  z-index: 100;
+  z-index: 1000;
   width: 200px;
   height: 200px;
   position: absolute;
@@ -69,3 +69,34 @@
   border-radius: 5px;
   border: 1px solid;
 }
+
+.controls_container {
+  position: absolute;
+  top: 0;
+  right: 50%;
+  z-index: 10;
+}
+
+.controls {
+  position: relative;
+  right: -50%;
+  background: #000000a6;
+  padding: 9px;
+}
+
+.controls_btn {
+  color: white;
+  background: none;
+  font-size: large;
+  border: 1px solid;
+  margin: 2px;
+  border-radius: 5px;
+}
+
+  .controls_btn:hover {
+    background: #777777;
+  }
+
+  .controls_btn:active {
+    background: #AAA;
+  }
