--- a/cityguessr.client/src/app/game/game.component.css
+++ b/cityguessr.client/src/app/game/game.component.css
@@ -52,7 +52,7 @@
   height: 200px;
   position: absolute;
   bottom: 10px;
-  left: 10px;
+  right: 10px;
   border: 2px solid black;
   box-shadow: black 3px 4px 11px 0px;
   border-radius: 15px;
@@ -100,3 +100,24 @@
   .controls_btn:active {
     background: #AAA;
   }
+
+
+.userList {
+  position: relative;
+  left: 0;
+  top: -50%;
+  background: #00000082;
+  color: white;
+}
+
+.userList_container {
+  position: absolute;
+  left: 0;
+  top: 50%;
+}
+
+.finalize_guess {
+  position: absolute;
+  bottom: 60px;
+  z-index: 1000;
+}
