--- a/cityguessr.client/src/app/app.component.css
+++ b/cityguessr.client/src/app/app.component.css
@@ -1,7 +1,9 @@
 ﻿:host {
-    max-width: 1280px;
-    padding: 2rem;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
     text-align: center;
+  display: flex;
 }
 
 th, td {
