--- a/cityguessr.client/src/app/game/game.component.css
+++ b/cityguessr.client/src/app/game/game.component.css
@@ -1,8 +1,8 @@
 .frame-container {
   position: absolute;
-  width: 500%;
+  width: 2100%;
   height: 100%;
-  left: -200%;
+  left: -1000%;
   pointer-events: none;
 }
 
@@ -114,10 +114,25 @@
   position: absolute;
   left: 0;
   top: 50%;
+  z-index: 1000;
 }
 
 .finalize_guess {
   position: absolute;
   bottom: 60px;
+  z-index: 1000;
+  font-size: 16pt;
+  background-color: green;
+  border-radius: 5px;
+  border: 1px solid white;
+  padding: 5px;
+  color: white;
+}
+
+app-circular-progress
+{
+  position: absolute;
+  top: 5px;
+  right: 5px;
   z-index: 1000;
 }
