--- a/cityguessr.client/src/styles.css
+++ b/cityguessr.client/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-image: url("/assets/wallpaper.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+html, body
+{
+  width: 100%;
+  height: 100%;
+}
